# itmlogic

./: .gitignore  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-docs.txt  requirements.txt  setup.py  travis.yml
.github/workflows/: publish.yml  test.yml
data/: ASTGTM2_N51W001_dem.tif.aux.xml  S004E026_AVE_DSM.tif.source.txt  S_AVE_DSM.vrt
data/pimter/: PIMTER_2019_Rx_Tx0_dem_height.csv  PIMTER_2019_Rx_Tx0_dem_length.csv  PIMTER_2019_Rx_Tx2_dem_height.csv  PIMTER_2019_Rx_Tx2_dem_length.csv  PIMTER_2019_Rx_Tx3_dem_height.csv  PIMTER_2019_Rx_Tx3_dem_length.csv  PIMTER_2019_Rx_Tx4_dem_height.csv  PIMTER_2019_Rx_Tx4_dem_length.csv  PIMTER_2019_Rx_Tx5_dem_height.csv  (+3 more)
docs/: authors.rst  conf.py  getting-started.rst  index.rst
paper/: EO_notes_longley_rice.docx  EO_notes_modules_and_scripts.xlsx  PIMTER_longleyrice_2019_coverage_diagram.m  lritm_box_diagram.pptx  paper.bib  paper.docx  paper.md
references/: itm_man.txt
scripts/: area.py  area_2tiles.py  hex_grid.py  itmlogic.py  link_budget_module.py  network_manager.py  p2p.py  p2p_2tiles.py  pimter.py  qkpfl.py  run_itmlogic.py  script_config.ini  terrain_module.py  uarea.py
src/itmlogic/: adiff.py  (+19 more)
tests/: conftest.py  test_adiff.py  test_ahd.py  test_aknfe.py  test_alos.py  test_area.py  test_ascat.py  test_avar.py  test_curv.py  test_dlthx.py  test_fht.py  test_h0f.py  test_hzns.py  test_lrprop.py  test_p2p.py  test_qerf.py  test_qerfi.py  test_qlra.py  test_qlrpfl.py  test_qlrps.py  test_qtile.py  test_zlsq.py  test_zlsq1.py  travis_install.sh
vis/: vis.py
(+19 files in other folders)
